--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -206,24 +206,7 @@
                         <div class="col-md-3 col-sm-6">
                             <article>
                                 <h4>CATEGORIES</h4>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <article>
-                                            <p><a href="#">Books</a></p>
-                                            <p><a href="#">Text books</a></p>
-                                            <p><a href="#">Nook books</a></p>
-                                            <p><a href="#">Audio books</a></p>
-                                            <p><a href="#">Magazines</a></p>
-                                        </article>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <article>
-                                            <p><a href="#">Movies</a></p>
-                                            <p><a href="#">Music</a></p>
-                                            <p><a href="#">Games</a></p>
-                                        </article>
-                                    </div>
-                                </div>
+                                <?php echo $this->footerCategoriesHtml();?>
                             </article>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -251,15 +234,15 @@
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <article>
-                                <h4>CONECT</h4>
+                                <h4>CONNECT</h4>
                                 <p class="socialNetworks">
-                                    <a href="#"><span class="fa fa-facebook"></span></a>
-                                    <a href="#"><span class="fa fa-pinterest-p"></span></a>
-                                    <a href="#"><span class="fa fa-linkedin"></span></a>
-                                    <a href="#"><span class="fa fa-twitter"></span></a>
-                                    <a href="#"><span class="fa fa-google-plus"></span></a>
-                                    <a href="#"><span class="fa fa-rss"></span></a>
-                                    <a href="#"><span class="fa fa-instagram"></span></a>
+                                    <a href="https://www.facebook.com/search/1749077905324811/local_search?surface=tyah" target="_blank"><span class="fa fa-facebook"></span></a>
+<!--                                    <a href="#"><span class="fa fa-pinterest-p"></span></a>-->
+                                    <a href="https://www.linkedin.com/company/10287387?trk=tyah&trkInfo=clickedVertical%3Acompany%2CclickedEntityId%3A10287387%2Cidx%3A4-3-9%2CtarId%3A1474286806128%2Ctas%3Acubes" target="_blank"><span class="fa fa-linkedin"></span></a>
+<!--                                    <a href="#"><span class="fa fa-twitter"></span></a>
+                                    <a href="#"><span class="fa fa-google-plus"></span></a>-->
+<!--                                    <a href="#"><span class="fa fa-rss"></span></a>-->
+<!--                                    <a href="#"><span class="fa fa-instagram"></span></a>-->
                                 </p>
                                 <p class="subscribe">Subscribe to our weekly newsletter.</p>
                                 <form class="form-group">
@@ -302,8 +285,6 @@
                         </div>
                         <div class="col-sm-6">
                             <article>
-                                <p class="copyRight">&copy;2014 BOOKSHOP.ALL RIGHTS. RESERVED.</p>
-                                <p class="madeBy">MADE WITH BY <a href="#" class="firm">HEZHTHEME</a></p>
                                 <a class="top" href="#">TOP <span class="fa fa-caret-up"></span></a>
                             </article>
                         </div>
