--- a/application/views/scripts/latestbooks/index.phtml
+++ b/application/views/scripts/latestbooks/index.phtml
@@ -111,7 +111,7 @@ $this->headTitle($this->sitemapPage['title']);
              ******************************************-->
 			<div class="container">
 				<div class="bestsellers clearfix text-center">
-					<h2>All Books</h2>
+					<h2>Latest Books</h2>
 					<?php 
 						foreach($this->books as $book) {?>
 								<div class="books">
