--- a/application/views/scripts/admin/books/index.phtml
+++ b/application/views/scripts/admin/books/index.phtml
@@ -29,6 +29,7 @@ $this->headTitle('Books');
                             <th></th>
                             <th class="text-center">Img</th>
                             <th class="text-center">Status</th>
+                            <th class="text-center">Sale</th>
                             <th>Title</th>
                             <th>Author</th>
                             <th>ISBN</th>
@@ -51,6 +52,11 @@ $this->headTitle('Books');
                                     <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer;"></i></td>
                                     <td class="text-center"><img style="max-height: 50px;" src="<?php echo $this->bookImgUrl($book); ?>"></td>
                                     <td class="text-center"><span class="badge alert-success" title="enabled"><i class="glyphicon glyphicon-ok"></i></span></td>
+								<?php if($book['sale'] == Application_Model_DbTable_CmsBooks::ON_SALE) {?>
+									<td class="text-center"><span class="badge alert-success" title="on-sale"><i class="glyphicon glyphicon-ok"></i></span></td>
+								<?php } else {?>
+									<td class="text-center"><span class="badge alert-danger" title="not-on-sale"><i class="glyphicon glyphicon-remove"></i></span></td>
+								<?php }?>
                                     <td><?php echo $this->escape($book['title']); ?></td>
                                     <td class="text-center"><?php echo $this->escape($book['author_id']); ?></td>
                                     <td><?php echo $this->escape($book['isbn']); ?></td>
@@ -82,6 +88,11 @@ $this->headTitle('Books');
                                     <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer;"></i></td>
                                     <td class="text-center"><img style="max-height: 24px;" src="<?php echo $this->bookImgUrl($book); ?>"></td>
                                     <td class="text-center"><span class="badge alert-danger" title="disabled"><i class="glyphicon glyphicon-remove"></i></span></td>
+								<?php if($book['sale'] == Application_Model_DbTable_CmsBooks::ON_SALE) {?>
+									<td class="text-center"><span class="badge alert-success" title="on-sale"><i class="glyphicon glyphicon-ok"></i></span></td>
+								<?php } else {?>
+									<td class="text-center"><span class="badge alert-danger" title="not-on-sale"><i class="glyphicon glyphicon-remove"></i></span></td>
+								<?php }?>
                                     <td><?php echo $this->escape($book['title']); ?></td>
                                     <td class="text-center"><?php echo $this->escape($book['author_id']); ?></td>
                                     <td><?php echo $this->escape($book['isbn']); ?></td>
