--- a/application/views/scripts/booksonsale/index.phtml
+++ b/application/views/scripts/booksonsale/index.phtml
@@ -111,21 +111,22 @@ $this->headTitle($this->sitemapPage['title']);
              ******************************************-->
 			<div class="container">
 				<div class="bestsellers clearfix text-center">
-					<h2>All Books</h2>
+					<h2>Books on Sale</h2>
 					<?php 
-						foreach($this->books as $book) {?>
+						foreach($this->books as $book) {	
+							?>
 								<div class="books">
 									<figure class="center-block">
 										<a href="<?php echo $this->bookUrl($book);?>"><img src="<?php echo $this->bookImgUrl($book);?>" class="img-responsive"></a>
-									<?php if($book['sale'] == Application_Model_DbTable_CmsBooks::ON_SALE) {?>
 										<span class="sale">SALE</span>
-									<?php }?>
 									</figure>
 									<h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
 									<p><span class="by">by</span> Stephen King</p>
 									<p class="prise center-block"><?php echo $this->escape($book['price']);?><!--<a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a>--></p>
 								</div>
-					<?php }?>
+							<?php
+						}
+					?>
 				</div>
 			</div>
 
