--- a/application/views/scripts/photogalleries/index.phtml
+++ b/application/views/scripts/photogalleries/index.phtml
@@ -14,7 +14,7 @@ $this->headMeta()->appendName('description', $this->sitemapPage['description']);
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-						<?php foreach($this->photoGalleries as $photoGallery) {;?>
+						<?php foreach($this->photoGalleries as $photoGallery) {?>
 						<div class="blogLists spacing">                          
 							<a href="<?php echo $this->photoGalleryUrl($photoGallery);?>" blog-img><img src="<?php echo $this->photoGalleryLeadingPhotoUrl($photoGallery);?>" alt="" class="center-block img-responsive"/></a>
 							<div class="spacing" style="text-align: center">
@@ -23,7 +23,6 @@ $this->headMeta()->appendName('description', $this->sitemapPage['description']);
 						</div>
 						<hr>
 						<?php }?>
-						
 					</div>
 				</div>
 			</div>
