--- a/application/views/scripts/admin/books/index.phtml
+++ b/application/views/scripts/admin/books/index.phtml
@@ -33,13 +33,13 @@ $this->headTitle('Books');
                             <th>Title</th>
                             <th>Author</th>
                             <th>ISBN</th>
-							<th>price</th>
                             <th>Category</th>
+							<th>Price</th>
                             <th>Format</th>
                             <th class="text-center">Number of Pages</th>
                             <th class="text-center">Date of Publication</th>
                             <th>Cover</th>
-                            <th>Letter</th>
+                            <th>Language</th>
                             <th class="text-center">#</th>
                         </tr>
                     </thead>
@@ -66,7 +66,7 @@ $this->headTitle('Books');
                                     <td class="text-center"><?php echo $this->escape($book['number_of_pages']); ?></td>
                                     <td><?php echo $this->escape($book['date_of_publication']); ?></td>
                                     <td class="text-center"><?php echo $this->escape($book['cover_id']); ?></td>
-                                    <td class="text-center"><?php echo $this->escape($book['letter_id']); ?></td>
+                                    <td class="text-center"><?php echo $this->escape($book['language_id']); ?></td>
                                     <td width="10%" class="text-center">
                                         <div class="btn-group btn-group-sm" role="group" aria-label="...">
                                             <a  
@@ -102,7 +102,7 @@ $this->headTitle('Books');
                                     <td class="text-center"><?php echo $this->escape($book['number_of_pages']); ?></td>
                                     <td><?php echo $this->escape($book['date_of_publication']); ?></td>
                                     <td class="text-center"><?php echo $this->escape($book['cover_id']); ?></td>
-                                    <td class="text-center"><?php echo $this->escape($book['letter_id']); ?></td>
+                                    <td class="text-center"><?php echo $this->escape($book['language_id']); ?></td>
                                     <td class="text-center">
                                         <div class="btn-group btn-group-sm" role="group" aria-label="...">
                                             <a  
