--- a/application/views/scripts/frontuser/index.phtml
+++ b/application/views/scripts/frontuser/index.phtml
@@ -1,8 +1,50 @@
 <?php
 
-/* 
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
+?>
+
+<div class="container" id="userPanel">
+	<div class="row">
+		<div class="col-sm-3">
+			<article>
+				<ul class="nav nav-pills nav-stacked sideNavigations">
+					<li role="presentation" class="active"><a href="#mojiPodaci" aria-controls="mojiPodaci" role="tab" data-toggle="tab">Moji podaci</a></li>
+					<li role="presentation"><a href="#izmenaPodataka" aria-controls="izmenaPodataka" role="tab" data-toggle="tab">Izmena podataka</a></li>
+					<li role="presentation"><a href="#mojaLozinka" aria-controls="mojaLozinka" role="tab" data-toggle="tab">Moja lozinka</a></li>
+					<li role="presentation"><a href="#mojePoruke" aria-controls="mojePoruke" role="tab" data-toggle="tab">Moje poruke</a></li>
+					<li role="presentation"><a href="#mojaKupovina" aria-controls="mojaKupovina" role="tab" data-toggle="tab">Moja kupovina</a></li>
+				</ul>
+			</article>
+		</div>
+		<div class="col-sm-9 user">
+			<div class="tab-content">
+				<div role="tabpanel" class="tab-pane active" id="mojiPodaci">
+					<h2 class="text-center">Moji podaci</h2>
+					<div class="media">
+						<div class="row">
+							<div class="col-sm-3">
+								<article>
+									<div class="media-left">
+										<img class="media-object img-circle img-responsive center-block" src="img/member1.png" alt="user">           
+									</div>
+								</article>
+							</div>
+							<div class="col-sm-9">
+								<article>
+									<div class="media-body">
+										<h4 class="media-heading">Petar Petrovic</h4>
+										<p>Marsala Tita 24 Kragujevac</p>
+										<p>034/123 45 67</p>
+										<p>063/ 123 45 67</p>
+										<p>11.07.1954.</p>
+										<a href="mailto:petar.petrovic@gmail.com">petar.petrovic@gmail.com</a>
+									</div>
+								</article>
+							</div>
+						</div>
+					</div>                                  
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
