--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -45,7 +45,7 @@
             <div class="top-menu">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <article class="top-menu-first">
                                 <ul class="list-unstyled list-inline text-center">
 <!--                                    <li><a data-toggle="modal" data-target="#modalPrimer" href="#">Online Store</a></li>-->
@@ -56,28 +56,28 @@
                                 </ul>
                             </article>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <article class="text-center top-menu-second">
                                 <span class=" glyphicon glyphicon-earphone"></span>
                                 <p>+1-234-567-8901</p>
                             </article>
                         </div>
-<!--                        <div class="col-md-4">
-                            <article class="top-menu-third">-->
-<!--                                <ul class="list-unstyled list-inline text-center">
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="register.html">Registracija</a></li>
+                        <div class="col-md-4">
+                            <article class="top-menu-third">
+                                <ul class="list-unstyled list-inline text-center">
+                                    <li><a href="<?php echo $this->url(array('controller' => 'session', 'action' => 'login'), 'default', true);?>">Login</a></li>
+                                    <li><a href="<?php echo $this->url(array('controller' => 'frontuser', 'action' => 'register'), 'default', true);?>">Registracija</a></li>
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
                                             <li><a href="#">Profile</a></li>
                                             <li><a href="#">My Shop</a></li>
-                                            <li><a href="#">Log Out</a></li>
+                                            <li><a href="<?php echo $this->url(array('controller' => 'session', 'action' => 'logout'), 'default', true);?>">Log Out</a></li>
                                         </ul>
                                     </li>
-                                </ul>-->
-<!--                            </article>
-                        </div>-->
+                                </ul>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </div>
