--- a/application/views/scripts/session/login.phtml
+++ b/application/views/scripts/session/login.phtml
@@ -1,8 +1,38 @@
 <?php
 
-/* 
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
+?>
+
+<!--******************************************
+                        MAIN START
+        *******************************************-->
+        <main class="logIn">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h3 class="text-center">Prijavite se</h3>
+                        <form id="form" data-toggle="validator" role="form" action="" method="post">
+							<input type="hidden" name="task" value="login">
+                            <div class="form-group">                          
+                                <input type="email" name="email" class="form-control" placeholder="Email" required required required data-error="Unesite ispravnu email adresu">
+                                <div class="help-block with-errors"></div>
+                            </div>
+                            <div class="form-group">
+                                <div class="password input-group">
+                                    <input type="password" name="password" id="password" class="form-control" placeholder="Lozinka" required required data-error="Unesite ispravnu lozinku"> 
+                                    <a href="javascript:void(0)" class="input-group-addon" ><span class="fa fa-eye"></span></a>
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-success">Posalji</button>
+                            <a href="forgotPassword.html" target="_blank">Zaboravili ste lozinku?</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <!--******************************************
+        **********************************************
+                            MAIN END
+        *********************************************
+        *********************************************-->
 
