--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,3 +1,6 @@
+<?php
+
+?>
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
@@ -25,7 +28,6 @@
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="http://resources/demos/style.css">
 		
         <script src="/front/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 			<?php echo $this->inlineScript();?>
@@ -65,8 +67,10 @@
                         <div class="col-md-4">
                             <article class="top-menu-third">
                                 <ul class="list-unstyled list-inline text-center">
+									<?php if (!Zend_Auth::getInstance()->hasIdentity()) { ?>
                                     <li><a href="<?php echo $this->url(array('controller' => 'session', 'action' => 'login'), 'default', true);?>">Login</a></li>
                                     <li><a href="<?php echo $this->url(array('controller' => 'frontuser', 'action' => 'register'), 'default', true);?>">Registracija</a></li>
+									<?php } else {?>
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
@@ -75,6 +79,7 @@
                                             <li><a href="<?php echo $this->url(array('controller' => 'session', 'action' => 'logout'), 'default', true);?>">Log Out</a></li>
                                         </ul>
                                     </li>
+									<?php }?>
                                 </ul>
                             </article>
                         </div>
