--- a/application/views/scripts/frontuser/index.phtml
+++ b/application/views/scripts/frontuser/index.phtml
@@ -1,50 +1,227 @@
 <?php
-
+$form = $this->form;
+$form->setElementDecorators(array('ViewHelper'));
 ?>
 
 <div class="container" id="userPanel">
-	<div class="row">
-		<div class="col-sm-3">
-			<article>
-				<ul class="nav nav-pills nav-stacked sideNavigations">
-					<li role="presentation" class="active"><a href="#mojiPodaci" aria-controls="mojiPodaci" role="tab" data-toggle="tab">Moji podaci</a></li>
-					<li role="presentation"><a href="#izmenaPodataka" aria-controls="izmenaPodataka" role="tab" data-toggle="tab">Izmena podataka</a></li>
-					<li role="presentation"><a href="#mojaLozinka" aria-controls="mojaLozinka" role="tab" data-toggle="tab">Moja lozinka</a></li>
-					<li role="presentation"><a href="#mojePoruke" aria-controls="mojePoruke" role="tab" data-toggle="tab">Moje poruke</a></li>
-					<li role="presentation"><a href="#mojaKupovina" aria-controls="mojaKupovina" role="tab" data-toggle="tab">Moja kupovina</a></li>
-				</ul>
-			</article>
-		</div>
-		<div class="col-sm-9 user">
-			<div class="tab-content">
-				<div role="tabpanel" class="tab-pane active" id="mojiPodaci">
-					<h2 class="text-center">Moji podaci</h2>
-					<div class="media">
-						<div class="row">
-							<div class="col-sm-3">
-								<article>
-									<div class="media-left">
-										<img class="media-object img-circle img-responsive center-block" src="img/member1.png" alt="user">           
+            <div class="row">
+                <div class="col-sm-3">
+                    <article>
+                        <ul class="nav nav-pills nav-stacked sideNavigations">
+                            <li role="presentation" class="active"><a href="#mojiPodaci" aria-controls="mojiPodaci" role="tab" data-toggle="tab">Moji podaci</a></li>
+                            <li role="presentation"><a href="#izmenaPodataka" aria-controls="izmenaPodataka" role="tab" data-toggle="tab">Izmena podataka</a></li>
+                            <li role="presentation"><a href="#mojaLozinka" aria-controls="mojaLozinka" role="tab" data-toggle="tab">Moja lozinka</a></li>
+                        </ul>
+                    </article>
+                </div>
+                <div class="col-sm-9 user">
+                    <div class="tab-content" style="margin-top: -95px;">
+                        <div role="tabpanel" class="tab-pane active" id="mojiPodaci">
+                            <h2 class="text-center">Moji podaci</h2>
+                            <div class="media">
+                                <div class="row">
+                                    <div class="col-sm-9">
+                                        <article>
+                                            <div class="media-body">
+                                                <h4 class="media-heading"><?php echo $this->frontUser['first_name'];?></h4>
+                                                <p><?php echo $this->frontUser['address'];?></p>
+                                                <p><?php echo $this->frontUser['mobile_phone'];?></p>
+                                                <a href="mailto:<?php echo $this->frontUser['email'];?>"><?php echo $this->frontUser['email'];?></a>
+                                            </div>
+                                        </article>
+                                    </div>
+                                </div>
+                            </div>                                  
+                        </div>
+                        <div class="tab-pane fade" id="izmenaPodataka">
+                            <h2 class="text-center">Izmena podataka</h2>
+                            <form class="formRegister" id="formUser" action="" method="post">
+							<input type="hidden" name="task" value="update">
+							<section class="row">
+								<div class="col-sm-6">
+									<div class="form-group ">
+										<?php 
+										echo $form->getElement('first_name')->setAttribs(array(
+											'class' => 'form-control',
+											'placeholder' => 'Ime',
+											'id' => 'first_name',
+											'required' => 'required',
+											'data-error' => "Unesite Vase ime",
+											'pattern' => "^[_A-z]{1,}$",
+										));
+										?>
+										<span class="star">*</span>
+										<div class="help-block with-errors">
+											<?php if ($form->getElement('first_name')->hasErrors()) {?>
+											<div class="has-error">
+												<?php foreach ($form->getElement('first_name')->getMessages() as $message) {?>
+												<p class="help-block"><?php echo $this->escape($message);?></p>
+												<?php }?>
+											</div>
+											<?php }?>
+										</div>
+									</div>  
+								</div> 
+								<div class="col-sm-6">  
+									<div class="form-group">
+										<?php 
+										echo $form->getElement('last_name')->setAttribs(array(
+											'class' => 'form-control',
+											'placeholder' => 'Prezime',
+											'id' => 'last_name',
+											'required' => 'required',
+											'data-error' => "Unesite Vase prezime",
+											'pattern' => "^[_A-z]{1,}$"
+										));
+										?>
+										<span class="star">*</span>
+										<div class="help-block with-errors">
+											<?php if ($form->getElement('last_name')->hasErrors()) {?>
+											<div class="has-error">
+												<?php foreach ($form->getElement('last_name')->getMessages() as $message) {?>
+												<p class="help-block"><?php echo $this->escape($message);?></p>
+												<?php }?>
+											</div>
+											<?php }?>
+										</div>
 									</div>
-								</article>
-							</div>
+
+								</div>  
+							</section>
+
+							<section class="row">
+								<div class="col-sm-6">
+									<div class="form-group">
+										<?php 
+										echo $form->getElement('address')->setAttribs(array(
+											'class' => 'form-control',
+											'placeholder' => 'Ulica',
+											'id' => 'address',
+											'required' => 'required',
+											'data-error' => "Unesite Vasu ulicu",
+										));
+										?>
+										<span class="star">*</span>
+										<div class="help-block with-errors">
+											<?php if ($form->getElement('address')->hasErrors()) {?>
+											<div class="has-error">
+												<?php foreach ($form->getElement('address')->getMessages() as $message) {?>
+												<p class="help-block"><?php echo $this->escape($message);?></p>
+												<?php }?>
+											</div>
+											<?php }?>
+										</div>
+									</div>  
+								</div> 
+								<div class="col-sm-6">
+									<div class="row">
+										<div class="col-sm-12">
+											<div class="form-group">
+												<?php 
+												echo $form->getElement('city')->setAttribs(array(
+													'class' => 'form-control',
+													'placeholder' => 'Grad',
+													'id' => 'city',
+													'required' => 'required',
+													'data-error' => "Unesite Vas grad",
+												));
+												?>
+												<span class="star">*</span>
+												<div class="help-block with-errors">
+													<?php if ($form->getElement('city')->hasErrors()) {?>
+													<div class="has-error">
+														<?php foreach ($form->getElement('city')->getMessages() as $message) {?>
+														<p class="help-block"><?php echo $this->escape($message);?></p>
+														<?php }?>
+													</div>
+													<?php }?>
+												</div>
+											</div>
+										</div>
+									</div>                                     
+								</div>  
+							</section>
+							<section class="row">
+								<div class="col-sm-6">
+									<div class="form-group"> 
+										<?php 
+										echo $form->getElement('mobile_phone')->setAttribs(array(
+											'class' => 'form-control',
+											'placeholder' => 'Kontakt telefon',
+											'id' => 'mobile_phone',
+											'required' => 'required',
+											'data-error' => "Unesite Vas kontant telefon",
+											'pattern' => "[_0-9]{1,}$"
+										));
+										?>
+										<span class="star">*</span>
+										<div class="help-block with-errors">
+											<?php if ($form->getElement('mobile_phone')->hasErrors()) {?>
+											<div class="has-error">
+												<?php foreach ($form->getElement('mobile_phone')->getMessages() as $message) {?>
+												<p class="help-block"><?php echo $this->escape($message);?></p>
+												<?php }?>
+											</div>
+											<?php }?>
+										</div>
+									</div>  
+								</div>
+								<div class="col-sm-6">
+									<div class="form-group">
+										<?php 
+										echo $form->getElement('email')->setAttribs(array(
+											'class' => 'form-control',
+											'placeholder' => 'Email',
+											'id' => 'email',
+											'required' => 'required',
+											'data-error' => "Unesite ispravan email",
+										));
+										?>
+										<div class="help-block with-errors">
+											<?php if ($form->getElement('email')->hasErrors()) {?>
+											<div class="has-error">
+												<?php foreach ($form->getElement('email')->getMessages() as $message) {?>
+												<p class="help-block"><?php echo $this->escape($message);?></p>
+												<?php }?>
+											</div>
+											<?php }?>
+										</div>
+									</div>  
+								</div>
+							</section>
+							<button type="submit" class="btn btn-success center-block">Posalji</button>
+					</form>
+				</div>
+				<div class="tab-pane fade" id="mojaLozinka">
+					<h2>Lozinka</h2>
+					<form class="form-horizontal" data-toggle="validator" id="myPassword" role="form" method="post" action="">
+						<input type="hidden" name="task" value="newpassword">
+						<div class="form-group">
+							<label for="inputPassword3" class="col-sm-3 control-label">Nova lozinka</label>
 							<div class="col-sm-9">
-								<article>
-									<div class="media-body">
-										<h4 class="media-heading">Petar Petrovic</h4>
-										<p>Marsala Tita 24 Kragujevac</p>
-										<p>034/123 45 67</p>
-										<p>063/ 123 45 67</p>
-										<p>11.07.1954.</p>
-										<a href="mailto:petar.petrovic@gmail.com">petar.petrovic@gmail.com</a>
-									</div>
-								</article>
+								<input type="password" name="password" class="form-control" id="inputPassword3" pattern="^[_A-z0-9]{1,}$" required data-error="Unesite ispravnu lozinku">
+								<span class="star">*</span>
+								<div class="help-block with-errors"></div>
 							</div>
 						</div>
-					</div>                                  
+						<div class="form-group">
+							<label for="inputPassword3" class="col-sm-3 control-label">Ponovi lozinku</label>
+							<div class="col-sm-9">
+								<input type="password" name="password_confirm" class="form-control" id="inputPassword3" pattern="^[_A-z0-9]{1,}$" required data-error="Unesite ispravnu lozinku">
+								<span class="star">*</span>
+								<div class="help-block with-errors"></div>
+							</div>
+						</div>
+						<button type="submit" class="btn btn-success center-block">Izmeni</button>
+					</form>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 
+
+<main>
+</main>
+<?php
+$this->headLink()->appendStylesheet($this->baseUrl('/front/css/UserPanel.css'));
