--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -1477,7 +1477,7 @@ nav-pills > li > a:hover {
 }
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus{
     background: transparent;
-    color:#008800 !important;
+    color:#fff !important;
 }
 .nav-pills > li > a, .nav-pills > li > a:hover, .nav-pills > li > a:focus{
     background: transparent;
@@ -1495,7 +1495,7 @@ nav-pills > li > a:hover {
 }
 .nav-pills > li {
     float: none;
-    display: inline-block;
+    display: block;
     background:#fff;
     position: relative;
     
